--- a/Assignments/Resume-Page/index.html
+++ b/Assignments/Resume-Page/index.html
@@ -5,5 +5,111 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resume | Dipesh Chaudhary</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Dipesh Chaudhary</h1>
+      <h2>
+        Software Engineer | Full Stack Developer | Web Designer | Tech
+        Enthusiast
+      </h2>
+    <main>
+      <section>
+        <h3>About Me</h3>
+        <p>
+          Passionate software engineer with expertise in full stack development and web design with <strong>2+ years of experience</strong>. Dedicated to creating efficient and user-friendly applications.
+        </p>
+      </section>
+      <hr />
+      <!-- Skills  -->
+      <section>
+        <h3>Skills</h3>
+        <ul>
+          <li>Programming Languages: JavaScript, Python</li>
+          <li>Web Technologies: HTML5, CSS3, React, Node.js, Express.js</li>
+          <li>Databases: MongoDB, MySQL</li>
+          <li>Version Control: Git, GitHub</li>
+          <li>Other Tools: Docker, AWS, Cloudflare, Apache</li>
+        </ul>
+      </section>
+      <hr />
+      <!-- Experience  -->
+       <section>
+        <h3>Experience</h3>
+        <table border="1" cellpadding="5" cellspacing="0">
+          <thead>
+            <th>Position</th>
+            <th>Company</th>
+            <th>Duration</th>
+          </thead>
+          <tbody>
+      
+            <tr>
+              <td>Junior Developer</td>
+              <td>Tech Axis Co.</td>
+              <td>Jun 2023 - Dec 2024</td>
+            </tr>
+          </tbody>
+        </table>
+       </section>
+      <hr />
+      <!-- Projects -->
+       <section>
+        <h3>Projects</h3>
+        <ol>
+          <li>
+            <strong>Portfolio Website:</strong> Developed a personal portfolio website  hosted it on Vercel to showcase my projects and skills.
+            <ul>
+              <li>Technologies: React, Tailwind CSS, Vercel</li>
+              <li>Timeline : Jan 2024 - Mar 2024</li>
+            </ul>
+          </li>
+          <li>
+            <strong>Blog App:</strong> Built a full-stack blog application  featuring user authentication, content management, and responsive design.
+            <ul>
+              <li>Technologies: MERN Stack (MongoDB, Express.js, React, Node.js)</li>
+              <li>Timeline : Sep 2024 - Dec 2024</li>
+            </ul>
+          </li>
+        </ol>
+       </section>
+      <hr />
+      <!-- Education -->
+        <section>
+          <h3>Education</h3>
+          <table border="1" cellpadding="5" cellspacing="0">
+            <thead>
+              <th>Degree</th>
+              <th>Institution</th>
+              <th>Year</th>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Bachelor of Science in Computer Science</td>
+                <td>IOE Thapathali Campus</td>
+                <td>2021 - 2025</td>
+              </tr>
+              <tr>
+                <td>Mern Stack Development</td>
+                <td>Tech Axis Co.</td>
+                <td>2023</td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
+      <hr />
+      <!-- Contact -->
+        <section>
+          <h3>Contact</h3>
+          <p>Email: <a href="mailto:dipeshfullcoder@gmail.com">dipeshfullcoder@gmail.com</a></p>
+          <p>Twitter: <a href="https://x.com/dipesschaudhary" target="_blank">@dipesschaudhary</a></p>
+          <p>Location : Kathmandu, Nepal</p>
+        </section>
+    </main>
+    <hr />
+    
+    <!-- Footer -->
+    <footer>
+      <p>&copy; 2026 Dipesh Chaudhary. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
