add resume pdf file

--- a/Assignments/Resume-Page/index.html
+++ b/Assignments/Resume-Page/index.html
@@ -109,6 +109,7 @@
     
     <!-- Footer -->
     <footer>
+      <p><a href="./Dipesh_chaudhary_resume.pdf" target="_blank" download>Download Resume</a></p>
       <p>&copy; 2026 Dipesh Chaudhary. All rights reserved.</p>
     </footer>
   </body>
