update project section

--- a/Assignments/Resume-Page/index.html
+++ b/Assignments/Resume-Page/index.html
@@ -64,9 +64,9 @@
             </ul>
           </li>
           <li>
-            <strong>Blog App:</strong> Built a full-stack blog application  featuring user authentication, content management, and responsive design.
+            <strong>Movie App:</strong> Built a movie app with features like movie search,watch trailer of movies , and responsive design.
             <ul>
-              <li>Technologies: MERN Stack (MongoDB, Express.js, React, Node.js)</li>
+              <li>Technologies: React, Tailwind CSS, Redux and TMDB API </li>
               <li>Timeline : Sep 2024 - Dec 2024</li>
             </ul>
           </li>
