--- a/Assignments/Resume-Page/index.html
+++ b/Assignments/Resume-Page/index.html
@@ -105,12 +105,14 @@
           <p>Github: <a href="https://github.com/dipeshxhy" target="_blank">@dipeshxhy</a></p>
           <p>Location : Kathmandu, Nepal</p>
         </section>
+        <aside>
+        <p><a href="./Dipesh_chaudhary_resume.pdf" target="_blank" download>Download Resume</a></p>
+        </aside>
     </main>
     <hr />
     
     <!-- Footer -->
     <footer>
-      <p><a href="./Dipesh_chaudhary_resume.pdf" target="_blank" download>Download Resume</a></p>
       <p>&copy; 2026 Dipesh Chaudhary. All rights reserved.</p>
     </footer>
   </body>
