--- a/Building Blocks/HTML/Portfolio/index.html
+++ b/Building Blocks/HTML/Portfolio/index.html
@@ -5,37 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./profile.jpg" type="image/x-icon">
     <title>Portfolio | Dipesh Chaudhary</title>
-
-    <style>
-      body {
-        background-color: #333;
-        color: #fff;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header>
-      <div>Dipesh</div>
-      <nav>
-        <ul>
-          <li>
-            <a href="#about">About</a>
-          </li>
-          <li>
-            <a href="#skills">Skills</a>
-          </li>
-          <li>
-            <a href="#portfolio">Portfolio</a>
-          </li>
-          <li>
-            <a href="#blogs">Blogs</a>
-          </li>
-          <li>
-            <a href="#contact">Contact</a>
-          </li>
-        </ul>
+    <!-- NAV -->
+    <nav class="main-nav">
+      <div class="profile-container">
+        <img class="profile" src="./me.jpg" alt="my profile image"  />
+      </div>
+      <div class="nav-link__container">
+        <ul class="nav-list">
+            <li>
+              <a href="#about">About</a>
+            </li>
+            <li>
+              <a href="#skills">Skills</a>
+            </li>
+            <li>
+              <a href="#portfolio">Portfolio</a>
+            </li>
+            <li>
+              <a href="#blogs">Blogs</a>
+            </li>
+            <li>
+              <a class="btn" href="#contact">Let's Connect</a>
+            </li>
+          </ul>
+      </div>
       </nav>
-    </header>
 
     <main>
       <!-- Hero section -->
