--- a/Building Blocks/HTML/Portfolio/index.html
+++ b/Building Blocks/HTML/Portfolio/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dipesh | Full Stack Developer</title>
+    <link rel="shortcut icon" href="me.jpg" type="image/x-icon" />
     <!-- font awesome cdn -->
     <link
       rel="stylesheet"
