reconstruct file structure

--- a/Projects/HTML/Portfolio/index.html
+++ b/Projects/HTML/Portfolio/index.html
@@ -62,14 +62,14 @@
             <a class="btn primary" href="#contact">Hire Me</a>
             <a
               class="btn secondary"
-              href="./Dipesh_chaudhary_resume.pdf"
+              href="./img/Dipesh_chaudhary_resume.pdf"
               download
               >Download CV</a
             >
           </div>
         </div>
 
-        <img src="./20230217_204021.jpg" class="hero-img" />
+        <img src="./img/20230217_204021.jpg" class="hero-img" />
       </section>
 
       <!-- SKILLS -->
@@ -95,7 +95,7 @@
         <div class="project-grid">
           <div class="project-card">
             <img
-              src="./screencapture-movie-dipeshchaudhary-name-np-2026-01-28-16_48_38.png"
+              src="./img/screencapture-movie-dipeshchaudhary-name-np-2026-01-28-16_48_38.png"
               alt="Movie App"
             />
 
