--- a/Projects/HTML/Omnifood/index.html
+++ b/Projects/HTML/Omnifood/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Omnifood | Eating Well By Just One Click</title>
+    <!-- Rubik font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- HEADER NAV -->
     <header class="header">
       <img src="./img/omnifood-logo.png" alt="Omnifood Logo" class="logo" />
       <nav class="main-nav">
@@ -29,7 +38,9 @@
         </ul>
       </nav>
     </header>
+    <!-- MAIN -->
     <main>
+      <!-- HERO SECTION -->
       <section class="section-hero">
         <div class="hero">
           <div class="hero-text-box">
@@ -84,6 +95,69 @@
               alt="Women enjoying meals , two food plates , Healthy food on a plate"
               width="200"
               class="hero-image"
+            />
+          </div>
+        </div>
+      </section>
+
+      <!-- HOW IT WOrKS SECTION -->
+      <section class="section-how">
+        <div class="container">
+          <span class="subheading">How it works</span>
+          <h2 class="heading-secondary">
+            Your daily dose of health in 3 simple steps
+          </h2>
+        </div>
+        <div class="container grid grid--2-cols grid--center-v">
+          <!-- Step 01 -->
+          <div class="step-text-box">
+            <p class="step-number">01</p>
+            <h3 class="heading-tertiary">
+              Tell us what you like (and what not)
+            </h3>
+            <p class="step-description">
+              Never again waste time thinking about what to eat! Omnifood AI
+              will create a 100% personalized weekly meal plan just for you. It
+              makes sure you get all the nutrients and vitamins you need, no
+              matter what diet you follow!
+            </p>
+          </div>
+          <div class="step-image-box">
+            <img
+              src="./img/app/app-screen-1.png"
+              alt="Iphone screen showing food options"
+            />
+          </div>
+          <!-- Step 02 -->
+          <div class="step-image-box">
+            <img
+              src="./img/app/app-screen-2.png"
+              alt="Iphone screen showing food delivery"
+            />
+          </div>
+          <div class="step-text-box">
+            <p class="step-number">02</p>
+            <h3 class="heading-tertiary">Approve your weekly meal plan</h3>
+            <p class="step-description">
+              Once per week, you will receive your personal meal plan for the
+              next week. You can change ingredients, swap entire meals, or even
+              add new recipes from our vast recipe database. It’s up to you!
+            </p>
+          </div>
+          <!-- Step 03 -->
+          <div class="step-text-box">
+            <p class="step-number">03</p>
+            <h3 class="heading-tertiary">Receive meals at your door</h3>
+            <p class="step-description">
+              Best chefs in town will cook your selected meal every day, and we
+              will deliver it to your door right before lunchtime. Enjoy your
+              freshly cooked healthy meal, without even lifting a finger!
+            </p>
+          </div>
+          <div class="step-image-box">
+            <img
+              src="./img/app/app-screen-3.png"
+              alt="Iphone screen showing food delivery"
             />
           </div>
         </div>
