complete Hero Section and start of TrustBy Section

--- a/Projects/Landing-Pages/Cursor/index.html
+++ b/Projects/Landing-Pages/Cursor/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cursor | Landing Page</title>
+    <link rel="shortcut icon" href="./imgs/icon.png" type="image/x-icon" />
     <!-- Linking CSS -->
+    <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -125,5 +127,109 @@
         <button class="btn download-btn">Download</button>
       </div>
     </nav>
+
+    <!-- MAIN -->
+    <main>
+      <!-- SECTION HERO  -->
+      <section class="section-hero">
+        <div class="hero container">
+          <p class="hero-text">
+            Built to make you extraordinarily productive, <br />
+            Cursor is the best way to code with AI.
+          </p>
+          <button class="btn download download-btn">
+            Downloads for Windows
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="icon-size"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3"
+              />
+            </svg>
+          </button>
+          <div class="hero-bg-img">
+            <img src="./imgs/hero-bg.png" alt="Hero Image" />
+          </div>
+        </div>
+      </section>
+
+      <!-- SECTION TRUSTED BY -->
+      <section class="section-trustedBy">
+        <div class="container">
+          <h2 class="text-center heading-secondary">
+            Trusted every day by millions of professional developers.
+          </h2>
+        </div>
+        <div class="container">
+          <div class="logos-box">
+            <ul class="logo-list">
+              <li class="logo-item">
+                <img
+                  class="logo"
+                  src="https://ptht05hbb1ssoooe.public.blob.vercel-storage.com/assets/misc/asset-beae7a1f5d7eb381a872.svg"
+                  alt="Stripe Logo"
+                />
+              </li>
+              <li class="logo-item">
+                <img
+                  class="logo"
+                  src="https://ptht05hbb1ssoooe.public.blob.vercel-storage.com/assets/misc/asset-53062f7690ae5b0cdbed.svg"
+                  alt="Open ai Logo"
+                />
+              </li>
+              <li class="logo-item">
+                <img
+                  class="logo"
+                  src="https://ptht05hbb1ssoooe.public.blob.vercel-storage.com/assets/logos/linear-logo.svg"
+                  alt="Linear Logo"
+                />
+              </li>
+              <li class="logo-item">
+                <img
+                  class="logo"
+                  src="https://ptht05hbb1ssoooe.public.blob.vercel-storage.com/assets/misc/asset-da55192921531e5fd2ba.svg"
+                  alt="Datadog Logo"
+                />
+              </li>
+              <li class="logo-item">
+                <img
+                  class="logo"
+                  src="https://ptht05hbb1ssoooe.public.blob.vercel-storage.com/assets/logos/nvidia-logo.svg"
+                  alt="Nvidia Logo"
+                />
+              </li>
+              <li class="logo-item">
+                <img
+                  class="logo"
+                  src="https://ptht05hbb1ssoooe.public.blob.vercel-storage.com/assets/misc/asset-105275382af564c3ab7c.svg"
+                  alt="Figma Logo"
+                />
+              </li>
+              <li class="logo-item">
+                <img
+                  class="logo"
+                  src="https://ptht05hbb1ssoooe.public.blob.vercel-storage.com/assets/logos/ramp-logo.svg"
+                  alt="Ramp Logo"
+                />
+              </li>
+              <li class="logo-item">
+                <img
+                  class="logo"
+                  src="https://ptht05hbb1ssoooe.public.blob.vercel-storage.com/assets/logos/adobe-logo.svg"
+                  alt="Adobe Logo"
+                />
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
