done the left side of code container in hero img

--- a/Projects/Landing-Pages/Cursor/index.html
+++ b/Projects/Landing-Pages/Cursor/index.html
@@ -132,6 +132,7 @@
     <main>
       <!-- SECTION HERO  -->
       <section class="section-hero">
+        <!-- HERO -->
         <div class="hero container">
           <p class="hero-text">
             Built to make you extraordinarily productive, <br />
@@ -154,8 +155,134 @@
               />
             </svg>
           </button>
-          <div class="hero-bg-img">
-            <img src="./imgs/hero-bg.png" alt="Hero Image" />
+        </div>
+        <div class="container image-box">
+          <img src="./imgs/hero-bg-img.webp" alt="hero Image" />
+          <div class="code-container">
+            <div class="code-top">
+              <div class="circles">
+                <span class="circle"></span>
+                <span class="circle"></span>
+                <span class="circle"></span>
+              </div>
+              <div>Cursor</div>
+              <div>Get Cursor</div>
+            </div>
+            <div class="code-left">
+              <!-- UPPER PART -->
+              <div>
+                <h3 class="progress-text">In Progress 3</h3>
+                <div class="in-progress-box">
+                  <div>
+                    <img
+                      class="spinner"
+                      src="./imgs/loder.svg"
+                      alt="Loader SVG"
+                    />
+                  </div>
+                  <div>
+                    <p class="trunc-text">Enterprise Order Management System</p>
+                    <p class="generating-text">Generating</p>
+                  </div>
+                </div>
+                <div class="in-progress-box">
+                  <div>
+                    <img
+                      class="spinner"
+                      src="./imgs/loder.svg"
+                      alt="Loader SVG"
+                    />
+                  </div>
+                  <div>
+                    <p class="trunc-text">
+                      Analyze Tab vs Agent Usage Patterns
+                    </p>
+                    <p class="generating-text">Generating</p>
+                  </div>
+                </div>
+                <div class="in-progress-box">
+                  <div>
+                    <img
+                      class="spinner"
+                      src="./imgs/loder.svg"
+                      alt="Loader SVG"
+                    />
+                  </div>
+                  <div>
+                    <p class="trunc-text">Fix PR Comments Fetching Issue</p>
+                    <p class="generating-text">Generating</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- DOWN PART -->
+              <div>
+                <h3 class="progress-text">Ready For Preview 3</h3>
+                <div class="in-progress-box flex items-center">
+                  <div>
+                    <img
+                      class="spinner"
+                      src="./imgs/circle-tick.svg"
+                      alt="Circle Tick SVG"
+                    />
+                  </div>
+                  <div>
+                    <p class="trunc-text">PyTorch MNIST Experiments</p>
+                    <p class="generating-text flex items-center gap-sm">
+                      <span class="green-num">+162</span>
+                      <span class="red-num">-37 .</span>
+                      <span class="trunc"
+                        >Done, configurable MNIST experiment framework with AMP
+                        and reports. • **Training**: AMP, train/val split,
+                        cosine schedu</span
+                      >
+                    </p>
+                  </div>
+                  <span class="time">now</span>
+                </div>
+
+                <div class="in-progress-box flex items-center">
+                  <div>
+                    <img
+                      class="spinner"
+                      src="./imgs/circle-tick.svg"
+                      alt="circle-tick SVG"
+                    />
+                  </div>
+                  <div>
+                    <p class="trunc-text">Set up Cursor Rules for Dashboard</p>
+                    <p class="generating-text flex items-center gap-sm">
+                      <span class="green-num">+37</span>
+                      <span class="red-num">-0 .</span>
+                      <span class="trunc"
+                        >Set up Cursor Rules for Dashboard</span
+                      >
+                    </p>
+                  </div>
+                  <span class="time">30m</span>
+                </div>
+                <div class="in-progress-box flex items-center">
+                  <div>
+                    <img
+                      class="spinner"
+                      src="./imgs/circle-tick.svg"
+                      alt="Loader SVG"
+                    />
+                  </div>
+                  <div>
+                    <p class="trunc-text">Bioinformatics Tools</p>
+                    <p class="generating-text flex items-center gap-sm">
+                      <span class="green-num">+135</span>
+                      <span class="red-num">-21 .</span>
+                      <span class="trunc">Biometrics Tools</span>
+                    </p>
+                  </div>
+                  <span class="time">45m</span>
+                </div>
+              </div>
+            </div>
+            <div class="code-middle">middle</div>
+            <div class="code-right">right</div>
           </div>
         </div>
       </section>
