--- a/Projects/Landing-Pages/Cursor/index.html
+++ b/Projects/Landing-Pages/Cursor/index.html
@@ -551,6 +551,30 @@
           </div>
         </div>
       </section>
+
+      <!-- SECTION FEATURES -->
+       <section class="section-features ">
+        <div class="container mb-md">
+          <img src="./imgs/feature-1.png" alt="Feature1" class="w-full">
+        </div>
+        <div class="container mb-md">
+          <img src="./imgs/feature-2.png" alt="Feature2" class="w-full">
+        </div>
+        <div class="container  ">
+          <div class="feature-container">
+            <div class="feature-text-box">
+              <div>
+                <h3 class="text-primary">Everywhere software gets built</h3>
+                <p class="text-gray-dark">Cursor is in GitHub reviewing your PRs, a teammate in Slack, and anywhere else you work.</p>
+              </div>
+              <p class="text-secondary font-bold">Learn about Cursor's ecosystem <span>&rarr;</span></p>
+            </div>
+            <div>
+            <img src="./imgs/feature-3.png" alt="Feature3" class="w-full">
+            </div>
+          </div>
+        </div>
+       </section>
     </main>
   </body>
 </html>
