done the card section

--- a/Projects/Landing-Pages/Cursor/index.html
+++ b/Projects/Landing-Pages/Cursor/index.html
@@ -553,7 +553,7 @@
       </section>
 
       <!-- SECTION FEATURES -->
-       <section class="section-features ">
+       <section class="section-features  ">
         <div class="container mb-md">
           <img src="./imgs/feature-1.png" alt="Feature1" class="w-full">
         </div>
@@ -575,6 +575,86 @@
           </div>
         </div>
        </section>
+
+       <!-- SECTION TESTIMONIALS -->
+        <section class="section-testimonial">
+          <div class="container">
+            <h2 class="text-center letter-spacing-sm mb-md">The new way to build software.</h2>
+          </div>
+
+          <!-- CARDS -->
+           <div class="container">
+            <div class="testimonials-cards grid grid--3-cols gap-12">
+              <div class="card flex flex-col">
+                <p class="mb-md lh-18">It was night and day from one batch to another, adoption went from single digits to over 80%. It just spread like wildfire, all the best builders were using Cursor.</p>
+                <div class="mt-auto flex items-center gap-12 ">
+                  <img src="./imgs/diana-hu-avatar.webp" alt="diana-hu-avatar" class="avatar">
+                  <div class="author">
+                    <h3 class="author-name">Diana Hu</h3>
+                    <p class="author-job">General Partner, Y Combinator</p>
+                  </div>
+                </div>
+              </div>
+               <div class="card flex flex-col ">
+                <p class="mb-md lh-18">The most useful AI tool that I currently pay for, hands down, is Cursor. It's fast, autocompletes when and where you need it to, handles brackets properly, sensible keyboard shortcuts, bring-your-own-model... everything is well put together.</p>
+                <div class="mt-auto flex items-center gap-12 ">
+                  <img src="./imgs/shadcn-avatar.webp" alt="shadcn-avatar" class="avatar">
+                  <div class="author">
+                    <h3 class="author-name">shadcn</h3>
+                    <p class="author-job">Creator of shadcn/ui</p>
+                  </div>
+                </div>
+              </div>
+               <div class="card flex flex-col ">
+                <p class="mb-md lh-18">The best LLM applications have an autonomy slider: you control how much independence to give the AI. In Cursor, you can do Tab completion, Cmd+K for targeted edits, or you can let it rip with the full autonomy agentic version.</p>
+                <div class="mt-auto flex items-center gap-12 ">
+                  <img src="./imgs/andrej-karpathy-avatar.webp" alt="andrej-karpathy-avatar" class="avatar">
+                  <div class="author">
+                    <h3 class="author-name">Andrej Karpathy</h3>
+                    <p class="author-job">CEO, Eureka labs</p>
+                  </div>
+                </div>
+              </div>
+               <div class="card flex flex-col ">
+                <p class="mb-md lh-18">Cursor quickly grew from hundreds to thousands of extremely enthusiastic Stripe employees. We spend more on R&D and software creation than any other undertaking, and there's significant economic outcomes when making that process more efficient and productive.</p>
+                <div class="mt-auto flex items-center gap-12 ">
+                  <img src="./imgs/patrick-collison-avatar.webp" alt="patrick-collison-avatar" class="avatar">
+                  <div class="author">
+                    <h3 class="author-name">Patrick Collison</h3>
+                    <p class="author-job">CEO, Stripe</p>
+                  </div>
+                </div>
+              </div>
+               <div class="card  flex flex-col">
+                <div class="mb-md flex flex-col gap-12"><p>It's official. </p>
+
+<p>I hate vibe coding. </p>
+<p>I love Cursor tab coding. </p>
+
+<p>It's wild.</p></div>
+                <div class="mt-auto flex items-center gap-12 ">
+                  <img src="./imgs/theprimeagen-avatar.webp" alt="theprimeagen-avatar" class="avatar">
+                  <div class="author">
+                    <h3 class="author-name">ThePrimeagen  </h3>
+                    <p class="author-job">@theprimeagen</p>
+                  </div>
+                </div>
+              </div>
+               <div class="card  flex flex-col">
+                <p class="mb-md lh-18">It's definitely becoming more fun to be a programmer. It's less about digging through pages and more about what you want to happen. We are at the 1% of what's possible, and it's in interactive experiences like Cursor where models like GPT-5 shine brightest.</p>
+                <div class="mt-auto flex items-center gap-12 ">
+                  <img src="./imgs/greg-brockman-avatar.webp" alt="greg-brockman-avatar" class="avatar">
+                  <div class="author">
+                    <h3 class="author-name">Greg Brockman</h3>
+                    <p class="author-job">President, OpenAI</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+           </div>
+
+           <!--  -->
+        </section>
     </main>
   </body>
 </html>
